--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,11 @@
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "permissions": []
+  "permissions": [
+    "audioCapture"
+  ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' 'wasm-eval' 'wasm-unsafe-eval'; object-src 'self'",
+    "worker_src": "'self' blob: 'wasm-eval' 'wasm-unsafe-eval'"
+  }
 }
