--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   "dependencies": {
     "axios": "^1.7.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@huggingface/transformers": "^3.2.0",
+    "@react-three/fiber": "^8.17.10",
+    "@tailwindcss/vite": "^4.0.0-beta.7",
+    "@types/three": "^0.171.0",
+    "motion": "^11.15.0",
+    "tailwindcss": "^4.0.0-beta.7",
+    "three": "^0.171.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
@@ -21,6 +28,12 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.0",
-    "vite": "^5.0.0"
+    "vite": "^6.0.1",
+    "@eslint/js": "^9.15.0",
+    "eslint": "^9.15.0",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.12.0"
   }
 }
